adding lab_01 and lab07 and their style stuff

--- a/Lab7/lab07_1.html
+++ b/Lab7/lab07_1.html
@@ -22,7 +22,7 @@
         });
     $( "a" ).addClass( "test" );
     $( "a" ).removeClass( "test" );
-    $.get( "test.html", function() {
+    $.get( "lab07_1.html", function() {
       myCallBack( param1, param2 );
     });
 
